--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
     "lume/": "https://deno.land/x/lume@v2.2.2/",
+    "blog/": "https://deno.land/x/lume_theme_simple_blog@v0.15.4/",
     "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@0.5.2/"
   },
   "tasks": {
